--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
-<img id="loading-screen-image" src="./assets/img/natterbox_svg.svg" alt="natterbox logo svg">
-<div id="categorisation-root"></div>
+<!--<img id="loading-screen-image" src="./assets/img/natterbox_svg.svg" alt="natterbox logo svg">-->
+<div id="mycar-root"></div>
 </body>
 </html>
