--- a/public/index.html
+++ b/public/index.html
@@ -8,10 +8,11 @@
     <meta
             name="description"
             content="The app will not be used as a
-                standalone application, but only 
+                standalone application, but only
                 inside Salesforce."
     />
-    <title>Categorisation</title>
+    <link rel="apple-touch-icon" href="./logo192.png" />
+    <title>MyCar</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
