--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="./assets/style/style.css"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
+    <link rel="manifest" href="./manifest.json" />
     <meta
             name="description"
             content="The app will not be used as a
