--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,9 @@
                 standalone application, but only
                 inside Salesforce."
     />
-    <link rel="apple-touch-icon" href="./logo192.png" />
+    <link rel="apple-touch-icon" href="./icon-192x192.png" />
+    <meta name="apple-mobile-web-app-capable" content="yes"></meta>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"></meta>
     <title>MyCar</title>
 </head>
 <body>
