--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="stylesheet" href="./assets/style/style.css"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+    <link rel="stylesheet" href="./assets/style.css"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no">
     <meta name="theme-color" content="#000000"/>
     <link rel="manifest" href="./manifest.json" />
     <meta
@@ -19,7 +19,7 @@
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
-<!--<img id="loading-screen-image" src="./assets/img/natterbox_svg.svg" alt="natterbox logo svg">-->
+<!--<img id="loading-screen-image" src="./assets/natterbox_svg.svg" alt="natterbox logo svg">-->
 <div id="mycar-root"></div>
 </body>
 </html>
