change project name

--- a/public/index.html
+++ b/public/index.html
@@ -6,11 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover, user-scalable=no">
     <meta name="theme-color" content="#000000">
     <link rel="manifest" href="./manifest.json">
-    <meta name="description" content="The app will not be used as a
-                standalone application, but only
-                inside Salesforce.">
+    <meta name="description" content="Jurnalul călătoriilor tale pe șosea, unde fiecare kilometru are o poveste.">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>MyCar</title>
+    <title>CarMaster</title>
     <link rel="icon" type="image/png" sizes="196x196" href="favicon-196.png">
     <link rel="apple-touch-icon" href="apple-icon-180.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
@@ -48,6 +46,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
 
-    <div id="mycar-root"></div>
+    <div id="carmaster-root"></div>
   </body>
 </html>
