--- a/public/index.html
+++ b/public/index.html
@@ -167,6 +167,11 @@
       href="apple-splash-1136-640.jpg"
       media="(device-width: 320px) and (device-height: 568px) and (-webkit-device-pixel-ratio: 2) and (orientation: landscape)"
     />
+    <style>
+      body {
+        background: #f4f2f2;
+      }
+    </style>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
